--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,10 @@
 {
+  "applications": {
+    "gecko": {
+      "id": "nomorefigure@chaosplant.tech",
+      "strict_min_version": "42.0"
+    }
+  },
 	"name": "No More Figure",
 	"version": "0.2",
 	"manifest_version": 2,
@@ -12,7 +18,9 @@
       "run_at": "document_start",
       "matches": [
         "*://twitter.com/*",
-        "*://*.twitter.com/*"
+        "*://*.twitter.com/*",
+        "*://x.com/*",
+        "*://*.x.com/*"
       ],
       "css": [
         "tw_embed_invisible.css"
